<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".AddVegetableActivity">

    <androidx.cardview.widget.CardView
        android:id="@+id/menuCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="@color/dark_blue"
        app:cardElevation="50dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <TextView
            android:id="@+id/menuTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/add_or_edit"
            android:textColor="@android:color/white"
            android:textSize="24sp" />
    </androidx.cardview.widget.CardView>

    <!-- Название -->
    <TextView
        android:id="@+id/labelTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        app:layout_constraintTop_toBottomOf="@id/menuCardView"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"/>

    <!-- Поле для ввода названия -->
    <EditText
        android:id="@+id/editTextVegetableName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:hint="@string/name"
        app:layout_constraintTop_toBottomOf="@id/labelTitle"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        tools:ignore="Autofill,TextFields" />


<!--    -->
<!--    &lt;!&ndash; Выбор вида работы &ndash;&gt;-->
<!--    <Spinner-->
<!--        android:id="@+id/spinnerWorkType"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        app:layout_constraintTop_toBottomOf="@id/editTextVegetableName"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"/>-->

<!--    &lt;!&ndash; Кнопка добавить &ndash;&gt;-->
<!--    <Button-->
<!--        android:id="@+id/buttonAdd"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:text="@string/add"-->
<!--        android:textColor="@color/dark_blue"-->
<!--        app:layout_constraintTop_toBottomOf="@id/spinnerWorkType"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"/>-->

<!--    &lt;!&ndash; Фон для динамически добавляемых кнопок &ndash;&gt;-->
<!--    <FrameLayout-->
<!--        android:id="@+id/frameLayoutButtons"-->
<!--        android:layout_width="0dp"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:background="@color/dark_blue"-->
<!--        app:layout_constraintTop_toBottomOf="@id/buttonAdd"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        android:layout_marginTop="16dp"-->
<!--        android:layout_marginStart="16dp"-->
<!--        android:layout_marginEnd="16dp"-->
<!--        android:layout_marginBottom="16dp">-->


<!--    </FrameLayout>-->

    <!-- Кнопка сохранить -->
    <Button
        android:id="@+id/buttonSave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp"
        android:textColor="@color/dark_blue"
        />
</androidx.constraintlayout.widget.ConstraintLayout>
