<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <!-- Плашка с главным меню -->
    <androidx.cardview.widget.CardView
        android:id="@+id/menuCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="0dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/dark_blue"
        app:cardCornerRadius="0dp"
        app:cardElevation="50dp"
        app:layout_constraintBottom_toTopOf="@+id/weatherCardView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/menuTitleTextView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:padding="16dp"
            android:text="@string/main_menu"
            android:textColor="@android:color/white"
            android:textSize="24sp" />



    </androidx.cardview.widget.CardView>

    <!-- Плашка с погодой -->
    <androidx.cardview.widget.CardView
        android:id="@+id/weatherCardView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        app:cardCornerRadius="0dp"
        app:cardElevation="50dp"
        app:cardBackgroundColor="@color/light_blue"
        app:cardPreventCornerOverlap="false"
        app:layout_constraintTop_toBottomOf="@id/menuCardView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">



        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

            <TextView
                android:id="@+id/text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/today"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/conditionTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="45dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                app:layout_constraintStart_toEndOf="@+id/text"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/temperatureTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="16dp"
                android:textColor="@color/white"
                android:textSize="18sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/conditionTextView" />

        </androidx.constraintlayout.widget.ConstraintLayout>


    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingTop="150dp"
        android:paddingLeft="16dp"
        android:paddingRight="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        tools:ignore="MissingConstraints">

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="350dp"
                android:layout_height="100dp"
                android:background="@drawable/vegetables">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="100dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="100dp">

                    <Button
                        android:id="@+id/buttonVegetables"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/vegetables"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="340dp"
                android:layout_height="100dp"
                android:background="@drawable/fruits">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <Button
                        android:id="@+id/buttonFruits"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/fruits"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="340dp"
                android:layout_height="100dp"
                android:background="@drawable/trees">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <Button
                        android:id="@+id/buttonTrees"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/trees"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="340dp"
            android:layout_height="100dp"
            android:layout_marginBottom="30dp"
            app:cardCornerRadius="20dp"
            app:cardElevation="5dp">

            <RelativeLayout
                android:layout_width="340dp"
                android:layout_height="100dp"
                android:background="@drawable/flowers">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="90dp"
                    android:layout_alignParentBottom="true"
                    android:layout_marginBottom="30dp"
                    app:cardBackgroundColor="@color/white"
                    app:cardCornerRadius="20dp"
                    app:cardElevation="0dp">

                    <Button
                        android:id="@+id/buttonFlowers"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@android:color/transparent"
                        android:text="@string/flowers"
                        android:textColor="@color/light_blue"
                        android:textSize="18sp" />

                </androidx.cardview.widget.CardView>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>


<!--    <Button
        android:id="@+id/bGet"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/get"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent" />-->

</androidx.constraintlayout.widget.ConstraintLayout>
